welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:10: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
def faireV(){setCouleurBrosse();avance();marquerSol();avance();gauche();avance();marquerSol();recule();droite();avance();marquerSol();avance();gauche()}
                             ^